--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                             {% if request.user.is_superuser %}
                             <li class="custom-dropdown"><a href="" class="dropdown-item">Manage Products</a></li>
                             {% endif %}
-                            <li class="custom-dropdown"><a href="" class="dropdown-item">My Profile</a></li>
+                            <li class="custom-dropdown"><a href="{% url 'profile' %}" class="dropdown-item">My Profile</a></li>
                             <li class="custom-dropdown"><a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a></li>
                             {% else %}
                             <li class="custom-dropdown"><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
