--- a/profiles/templates/profile.html
+++ b/profiles/templates/profile.html
@@ -19,17 +19,38 @@
     <div class="row d-flex justify-content-center">
         <div class="col-11 col-lg-7 rounded-4 shadow bg-white mb-3 profile-dropdown">
             <div class="text-center">
+                <a data-bs-toggle="collapse" href="#account-info" role="button" aria-expanded="false"
+                    aria-controls="account-info" id="collapse-toggle">
+                    <h2 class="mt-3"><i class="fa-solid fa-user fa-lg me-2"></i>Account info</h2>
+                    <p>Update your account information</p>
+                </a>
+            </div>
+            <div class="collapse" id="account-info">
+                <div>
+                    <form method="POST" action="{% url 'profile' %}">
+                        {% csrf_token %}
+                        {{ user_account_form|crispy }}
+                        <button class="btn btn-custom-yellow my-3" type="submit" name="edit_acc_info">Save
+                            Information</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row d-flex justify-content-center">
+        <div class="col-11 col-lg-7 rounded-4 shadow bg-white mb-3 profile-dropdown">
+            <div class="text-center">
                 <a data-bs-toggle="collapse" href="#profile-info" role="button" aria-expanded="false"
                     aria-controls="profile-info" id="collapse-toggle">
-                    <h2 class="mt-3"><i class="fa-solid fa-user fa-lg me-2"></i>Profile info</h2>
-                    <p>Update your profile information</p>
+                    <h2 class="mt-3"><i class="fa-solid fa-truck-fast fa-lg me-2"></i></i>Shipping info</h2>
+                    <p>Update your shipping information</p>
                 </a>
             </div>
             <div class="collapse" id="profile-info">
                 <div>
                     <form method="POST" action="{% url 'profile' %}">
                         {% csrf_token %}
-                        {{ form|crispy }}
+                        {{ user_profile_form|crispy }}
                         <button class="btn btn-custom-yellow my-3" type="submit" name="edit_info">Save
                             Information</button>
                     </form>
@@ -49,7 +70,12 @@
             </div>
             <div class="collapse" id="account-password">
                 <div>
-                    <p>Update your info</p>
+                    <form method="POST" action="{% url 'profile' %}">
+                        {% csrf_token %}
+                        {{ user_password_form|crispy }}
+                        <button class="btn btn-custom-yellow my-3" type="submit" name="edit_password">Save
+                            Information</button>
+                    </form>
                 </div>
             </div>
         </div>
