--- a/products/templates/add_product.html
+++ b/products/templates/add_product.html
@@ -3,13 +3,13 @@
 {% load basket_tools %}
 
 
-{% block extra_title %}Manage products{% endblock %}
+{% block extra_title %}Add product{% endblock %}
 
 {% block content %}
 <div class="container">
     <div class="row d-flex justify-content-center">
         <div class="col-11 col-md-6 text-center mt-3 mb-3">
-            <h2><strong>Manage Products</strong></h2>
+            <h2><strong>Add Product</strong></h2>
             <hr class="w-75 mb-1 mx-auto">
         </div>
     </div>
