--- a/products/templates/add_product.html
+++ b/products/templates/add_product.html
@@ -17,7 +17,14 @@
         <div class="col-11 col-md-6 border rounded-4 bg-white shadow py-3 mb-3">
             <form method="POST" action="{% url 'add_product' %}" enctype="multipart/form-data">
                 {% csrf_token %}
-                {{ form | crispy }}
+                <!-- From done this way so we can remove field label -->
+                {% for field in form %}
+                    {% if field.name != 'image' %}
+                        {{ field | as_crispy_field }}
+                    {% else %}
+                        {{ field }}
+                    {% endif %}
+                {% endfor %}
                 <div class="text-end mt-3">
                     <a class="btn btn-custom-blue" href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-custom-yellow" type="submit">Add Product</button>
@@ -28,4 +35,14 @@
  
 </div>
 
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+        });
+    </script>
 {% endblock %}
