--- a/profiles/templates/profile.html
+++ b/profiles/templates/profile.html
@@ -129,9 +129,33 @@
                 </a>
             </div>
             <div class="collapse" id="wishlist">
-                <div>
-                    <p>Update your info</p>
-                </div>
+                {% for product in wishlist_products %}
+                    <div class="row mt-1 ms-sm-3 align-items-center">
+                        <div class="col-6 col-sm-2 mb-1 offset-3 offset-sm-0">
+                            <a href="{% url 'product_detail' product.id %}">
+                                {% if product.image %}
+                                <img class="img-fluid rounded-4" src="{{ product.image.url }}"
+                                    alt="{{ product.name }}">
+                                {% else %}
+                                <img class="img-fluid rounded-4"
+                                    src="{% static 'images/no-image-placeholder.webp' %}" alt=" {{ product.name }}">
+                                {% endif %}
+                            </a>
+                        </div>
+                        <div class="col-9 col-sm-6">
+                            <p class="my-0"><strong>{{ product.name }}</strong></p>
+                        </div>
+                        <div class="col-2 col-sm-3 text-center">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <p class="my-0 small text-muted me-1">
+                                    €{{ product.price }}
+                                </p>
+
+                            </div>	
+                        </div>
+                    </div>
+                    <hr class="w-75 text-muted mx-auto">
+                {% endfor %}
             </div>
         </div>
     </div>
