--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -71,7 +71,7 @@
     </div>
 </div>
 <div class="btt-button shadow-sm rounded-3 border-blue feedback">
-    <a class="btt-link d-flex h-100">
+    <a href="#" class="btt-link d-flex h-100">
         <i class="fas fa-arrow-up text-yellow mx-auto my-auto"></i>
     </a>
 </div>
