--- a/products/templates/add_product.html
+++ b/products/templates/add_product.html
@@ -8,7 +8,7 @@
 <div class="container">
     <div class="row d-flex justify-content-center">
         <div class="col-11 col-md-10 col-lg-8 text-center mt-3 mb-3">
-            <h2><strong>Add Product</strong></h2>
+            <h1 class="text-blue"><strong>Add Product</strong></h1>
             <hr class="w-75 mb-1 mx-auto">
         </div>
     </div>
